colback/tests/ui/fail_no_default.stderr
error: null='default' requires #[polars(default = ...)] to be set
 --> tests/ui/fail_no_default.rs:7:5
  |
7 |     row_b: bool,
  |     ^^^^^
